--- a/src/views/pages/admin/login.ejs
+++ b/src/views/pages/admin/login.ejs
@@ -2,9 +2,11 @@
 <html lang="vi">
 
 <head>
-
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" content="#00696d">
+	<meta name="author" content="SE104.O11_Nhom6">
+	<meta name="description" content="Đăng nhập vào chế độ Quản trị viên để quản lý tổ chức của bạn.">
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
