--- a/src/views/pages/auth/login.ejs
+++ b/src/views/pages/auth/login.ejs
@@ -2,12 +2,13 @@
 <html lang="vi">
 
 <head>
-
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" content="#00696d">
+	<meta name="author" content="SE104.O11_Nhom6">
+	<meta name="description" content="Hãy đăng nhập để trở thành thành viên của gia đình 2WAYS.">
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
 	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
 	<link rel="stylesheet" href="/styles/pages/auth/login.css">
 
